@@ -101,8 +101,8 @@ class SubrackComponentManager(ComponentManagerWithUpstreamPowerSupply):
             power_supply_fan_speeds=None,
             power_supply_powers=None,
             power_supply_voltages=None,
-            subrack_fan_speed=None,
-            subrack_fan_speed_percent=None,
+            subrack_fan_speeds=None,
+            subrack_fan_speeds_percent=None,
             subrack_fan_mode=None,
             tpm_currents=None,
             tpm_powers=None,
