@@ -97,8 +97,8 @@ class SubrackDriver(
             power_supply_fan_speeds=None,
             power_supply_powers=None,
             power_supply_voltages=None,
-            subrack_fan_speed=None,
-            subrack_fan_speed_percent=None,
+            subrack_fan_speeds=None,
+            subrack_fan_speeds_percent=None,
             subrack_fan_mode=None,
             tpm_currents=None,
             tpm_powers=None,
@@ -473,8 +473,8 @@ class SubrackDriver(
                 "power_supply_fan_speeds",
                 "power_supply_powers",
                 "power_supply_voltages",
-                "subrack_fan_speed",
-                "subrack_fan_speed_percent",
+                "subrack_fan_speeds",
+                "subrack_fan_speeds_percent",
                 "subrack_fan_mode",
                 "tpm_currents",
                 "tpm_powers",
@@ -634,8 +634,8 @@ class SubrackDriver(
             power_supply_fan_speeds=None,
             power_supply_powers=None,
             power_supply_voltages=None,
-            subrack_fan_speed=None,
-            subrack_fan_speed_percent=None,
+            subrack_fan_speeds=None,
+            subrack_fan_speeds_percent=None,
             subrack_fan_mode=None,
             tpm_currents=None,
             tpm_powers=None,
